--- a/common/footer.jspf
+++ b/common/footer.jspf
@@ -1,3 +1,3 @@
 <%@ page language="java" contentType="text/html; charset=EUC-KR"
         pageEncoding="EUC-KR"%>
-        â“’ copyright hyekyung yang
+        ¨Ï copyright dev_koo
