--- a/style.css
+++ b/style.css
@@ -1,70 +1,3 @@
-
-/* nav 부분 */
-nav {
-    text-align: center;
-}
-
-nav ul ul {
-    display: none;
-}
-
-nav ul li:hover > ul {
-    display: block;
-}
-
-
-nav ul {
-    background: #efefef;
-    background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);
-    background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%);
-    background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%);
-    box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
-    padding: 0 10px;
-    border-radius: 10px;
-    list-style: none;
-    position: relative;
-    display: inline-table;
-}
-
-nav ul:after {
-    content: ""; clear: both; display: block;
-}
-
-nav ul li {
-    float: left;
-}
-nav ul li:hover {
-    background: #4b545f;
-    background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
-    background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
-    background: -webkit-linear-gradient(top, #4f5964 0%,#5f6975 40%);
-}
-nav ul li:hover a {
-    color: #fff;
-}
-
-nav ul li a {
-    display: block; padding: 5px 40px;
-    color: #757575; text-decoration: none;
-}
-
-nav ul ul {
-    background: #5f6975; border-radius: 0px; padding: 0;
-    position: absolute; top: 100%;
-}
-nav ul ul li {
-    float: none;
-    width : 200px;
-    border-top: 1px solid #6b727c;
-    border-bottom: 1px solid #575f6a;
-    position: relative;
-}
-
-nav ul ul li a:hover {
-    background: #4b545f;
-}
-
-
 /* table 부분 */
 table {
     width : 80%;
@@ -72,7 +5,7 @@ table {
 }
 
 td {
-    padding : 5px;
+    padding : 11px;
 }
 
 
@@ -80,84 +13,70 @@ td {
 .container{
     display :inline-flex;
     width : 100%;
-    height : 180%;
+    height : 130%;
     flex-direction : column;
-    /*
-    container 배치 바꾸고 싶을 때
-    margin-left : 5%;
-    margin-right : 10%;
-    */
-    text-align: center;
-    vertical-align: middle;
-    /*border : 1px solid black;*/
-    /*background-color: #F6EECA;*/
-
-
 }
 
 
 /* header 부분 */
 .header{
     display : inline-flex;
-    flex : 0 1 30px;
+    flex : 0 1 10px;
+    width : 100%;
     justify-content: flex-end;
-    /*border : 1px solid black;*/
-
+    background-color: #FAFAFA;
+    border : 0.5px solid #F2F2F2;
 }
 
-/*
-.logo{
+.header_right{
+    width : 80%;
+    margin-left : auto;
+    text-align: right;
+}
+
+.header_left{
     width : 20%;
     cursor : pointer;
+
 }
-*/
+
+.header_nav{
+    width : 100%;
+    height : 50px;
+}
+
+.header_nav ul{
+    list-style-type : none;
+}
+.header_nav ul li {
+    display : inline;
+    margin : 35px 10px 35px 10px;
+    padding : 10px 35px 10px 35px;
+    cursor : pointer;
+    color : #848484;
+}
 
 
 .user_interface {
-    margin : 10px;
-    font-family: "Garamond";
+    font-size : 13px;
+    margin : 20px 0px 20px 0px;
+    padding : 0px 20px 0px 20px;
     color : #848484;
-    font-weight:bold;
-    cursor : pointer;
 }
 
-
-/* nav-container 부분 */
-
-.nav-container{
-    display : inline-flex;
-    flex-direction: row;
-    width : 100%;
-    margin : 0;
-    padding: 0;
-   /*
-    justify-content: flex-end;
-    font-family: "Arial";
-    */
-    height : 4%;
-    color : #848484;
-    font-weight:bold;
-    background-color: darkslategrey;
+.user_interface ul{
     list-style-type : none;
-    /*
-    로고 삽입시 지정
-    justify-content: flex-end;
-    */
 }
 
-
-.nav-item {
-    padding : 15px;
+.user_interface ul li {
+    display : inline;
+    margin : 40px 0px 40px 0px;
+    padding : 0px 20px 0px 20px;
     cursor : pointer;
-    justify-content: space-between;
+    border-left : 1px solid #c0c0c0;
 }
-
-.nav-item:nth-child(1){
-    background-color : blanchedalmond;
-}
-
-.nav-item:hover{
-    background-color: whitesmoke;
+.user_interface ul li:first-child {
+    border-left: none;
 }
 
 
@@ -166,7 +85,7 @@ td {
 .content {
     display: inline-flex;
     justify-content: center;
-    flex : 0 0 400px;
+    flex : 1 1 350px;
     /*
     border : 1px solid red;
     margin-left : 10%;
@@ -176,34 +95,58 @@ td {
 
 
 
+
+
 /* sidebar 부분 */
-.sidebar-container {
+.sidebar_container {
     display: inline-flex;
     justify-content: space-evenly;
     flex: 0 1 50px;
     /*margin-top: 10px;*/
     background-color: black;
-    color : white;
+    color : whitesmoke;
 }
 
-.sidebar-container-left{
+.sidebar_container_left{
     display: inline-flex;
-    border: 1px solid red;
+    width : 50%;
+
+}
+
+.sidebar_container_left_content{
+    display : inline-flex;
+    width : 20%;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+.sidebar_container_left_text_box{
+    display : inline-flex;
+    width : 80%;
+    justify-content: left;
+    align-items: center;
+}
+
+
+
+.sidebar_container_right{
+    display: inline-flex;
     width : 50%;
     justify-content: center;
     align-items: center;
-
+    background-color: white;
+    color : black;
 }
 
-.sidebar-container-right{
-    display: inline-flex;
-    border : 1px solid red;
-    width : 50%;
-    justify-content: center;
+.sidebar_container_right_content{
+    display : inline-flex;
+    width : 80%;
+    justify-content: left;
     align-items: center;
-
+    font-weight : bold;
 }
-
 
 
 /* footer 부분 */
@@ -214,7 +157,7 @@ td {
     /*font-weight:bold;*/
     background-color: #2E2E2E;
     color : #848484;
-    flex : 0 1 100px;
+    flex : 1 1 100px;
     justify-content: center;
     font-family: "Garamond";
 }
@@ -228,27 +171,33 @@ td {
     display: inline-flex;
     flex-direction : column;
     flex : 1 0 100px;
-    border: 2px solid Red;
+    width : 100%;
 }
 
 .content_header {
     display: inline-flex;
-    flex : 0 1 30px;
-    border: 2px solid Red;
-    justify-content: center;
+    flex : 0 1 100px;
+    color : black;
+    justify-content: left;
     align-items: center;
+    margin-left : 30px;
 
 }
+
 .content_body {
     display: inline-flex;
-    border: 2px solid black;
     flex : 1 1 50px;
+    width : 100%;
+
+    /*
+    스크롤로 넘치지 않게
+    overflow : auto;*/
     justify-content: center;
+    margin : 0 auto;
 }
 .content_footer {
     display: inline-flex;
     flex : 0 1 50px;
-    border: 2px solid #2db400;
     justify-content: center;
 }
 
@@ -260,4 +209,44 @@ td {
     text-align : center;
     width : 150px;
     height : 150px;
+}
+
+/* intro 부분 */
+.img{
+    position : relative;
+    background-image : url(https://wikidocs.net/images/page/37661/%E1%84%8B%E1%85%AC%E1%84%87%E1%85%AE%E1%84%8C%E1%85%A5%E1%86%AB%E1%84%80%E1%85%A7%E1%86%BC2.jpeg);
+    height : 100vh;
+    background-size : cover;
+}
+
+.img-cover{
+    position : absolute;
+    height : 100%;
+    width : 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index : 1;
+}
+
+.img .content{
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-10%, 120%);
+    font-size:1.3rem;
+    color: white;
+    z-index: 2;
+    text-align: right;
+}
+
+/* introduction 부분 */
+.introduction_box{
+    display: inline-flex;
+    font-family: "Arial";
+    color : #848484;
+    font-size : 14px;
+    justify-content: center;
+    align-items: center;
+    width : 100%;
+    letter-spacing : 3px;
+    line-height : 180%;
 }
